# Sovi

./: .env.example  .gitignore  DEPENDENCIES.md  README.md  docker-compose.yml  renovate.json
api/: Dockerfile  alembic.ini  requirements.txt  seed.py
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_add_is_admin.py
api/app/: config.py  database.py  dependencies.py  main.py
api/app/auth/: cookies.py  crypto.py  csrf.py  ratelimit.py  session.py  totp.py
api/app/categorization/: ai.py  pipeline.py  rules.py
api/app/models/: auth.py  categories.py  debt.py  (+3 more)
authelia/: configuration.yml
brand/: .thumbnail  BRAND.md  SKILL.md  Sovi Brand.html  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md
brand/archive/: Finalists - Aperture & Ledger.html  Mark Study.html
brand/guidelines/: brand-logo.html  brand-voice.html  color-brand.html  color-neutrals.html  color-status.html  spacing-elevation.html  spacing-radii.html  spacing-scale.html  type-eyebrow.html  type-numerals.html  type-scale.html
brand/tokens/: colors.css  fonts.css  spacing.css  typography.css
brand/ui_kits/: Icons.jsx
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx  theme.ts
nginx/: nginx.conf
shared/payoff/: package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
worker/: Dockerfile  db.py  main.py  milestones.py  requirements.txt  settings.py  sync.py  tasks.py  worker.py
(+98 files in other folders)
